--- a/casaConectada/css/styles.css
+++ b/casaConectada/css/styles.css
@@ -4,20 +4,6 @@ body {
     margin: 0;
     overflow-x: hidden;
   }
-
-  /* .container {
-    max-width: 1280px;
-    margin: 0 auto;
-  } */
-  
- /* .prod {
-    max-width: 200px;
-    text-align: center;
-    margin: 40px;
-    cursor: pointer; para que salga el dedo en el cursor 
-    
-  }*/
-  
   
   .prod h5 {
     color: rgb(72, 72, 72);
@@ -25,13 +11,8 @@ body {
     text-align: left;
     font-size: large;
     text-transform: uppercase;
-    /*text-transform esto es nuevo no lo conocia  */
+    /*text-transform para convertir a mayusculas  */
   }
-  
-  /*.prod p{
-    margin: 2px;
-    text-align: justify;
-  }*/
 
   .prod {
     transition: all 0.2s;
@@ -42,16 +23,17 @@ body {
   .prod:hover {
     transform: scale(1.05);
     filter: grayscale(0);
+    /* al pasar el raton se pone en color y aumenta su tamaño  */
   }
 
   #seccionProductos { 
     grid-gap: 30px;
+    /* define el espacio entre filas y columnas en la rejilla */
   }
-  
-
 
   nav ul {
     display: flex;
+    /* para adaptar los productos al espacio disponible */
   }
   
   main {
@@ -161,23 +143,14 @@ body {
  
   .contacto{
     background-color:rgb(0, 0, 255);
-    /* float: left; */
     color: white;
     font-size: smaller;
-    /* display: block; */
-    /* height: 130px; */
-    /* padding: 5px; */
-  
   }
   /* Reglas del footer */
   .licencia{
-    /* display: block; */
-    /* float: right; */
     background-color: rgb(60, 60, 60);
     font-size: x-small;
     color: white;
-    /* padding: 5px; */
-    /* height: 130px; */
     text-align: right;
   }
   footer{
@@ -187,13 +160,9 @@ body {
   }
 
   .atribuciones{
-    /* display: block; */
-    /* float: left; */
     font-size: x-small;
     color: white;
     background-color: rgb(196, 196, 196);
-    /* padding: 5px; */
-    /* height:130px; */
     font-weight: bold;
   }
 
@@ -235,13 +204,6 @@ body {
   width: 60%;
 }
 
-/* button {
-  background-color: rgb(60,60,60);
-  border: none;
-  padding: 8px 24px;
-  color: white;
-  text-align: center;
-} */
 
 .prod .card-img-top {
   height: 300px;
