se corrige el numero de provincia por el nombre, se corrige el la tarjeta de producto incluyendo precio, se corrige los botones de filtro para que sean responsive, se borra añadir del pedido

--- a/casaConectada/css/styles.css
+++ b/casaConectada/css/styles.css
@@ -210,12 +210,13 @@ body {
   background-position: center;
   background-size: cover;
 }
-.filtros{
+
+/*.filtros{
   margin-top: 20px;
   display: flex;
   justify-content: center;
   grid-gap: 10px;
-}
+}*/
 
 /* Reglas de La Tienda */
 .laTienda{
