--- a/casaConectada/css/styles.css
+++ b/casaConectada/css/styles.css
@@ -11,7 +11,7 @@ body {
     text-align: left;
     font-size: large;
     text-transform: uppercase;
-    /*text-transform para convertir a mayusculas  */
+
   }
 
   .prod {
@@ -55,9 +55,7 @@ body {
     padding-top: 10px;
     padding-right: 10px;
   }
-  /* .casa{
-    padding-bottom: 11px;
-  } */
+
   .secciones{
     display: block;
     color: black;
@@ -211,12 +209,7 @@ body {
   background-size: cover;
 }
 
-/*.filtros{
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  grid-gap: 10px;
-}*/
+
 
 /* Reglas de La Tienda */
 .laTienda{
@@ -240,3 +233,31 @@ body {
 #parrafo{
   height: auto;
 }
+
+.miniatura {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+.miniatura:hover{
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+/*Reglas para reducir el campo de texto en la tabla de productos en admin*/
+.descripcion, .resumen{
+  width:400px;
+  
+  /**Major Properties**/
+  overflow:hidden;
+  line-height: 2rem;
+  max-height: 8rem;
+  -webkit-box-orient: vertical;
+  display: block;
+  display: -webkit-box;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 4;
+}
+
